# reacthome-firmware

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flash.sh  flash_erase.sh  flash_koro.sh  graph.sh  modules-full.dot  modules.dot  reacthome-firmware.cabal
GD32F330K8U6/: ao4-gd32f330k8u6-2.1.hex  di4-gd32f330k8u6-4.6.hex  di4-gd32f330k8u6-4.7.hex  di4-gd32f330k8u6-4.9.hex  di4_la_v5.0.hex  di4_la_v5.5.hex  di4_v4.3.hex  di4_v4.4.hex  di4la-gd32f330k8u6-1.10.hex  di4la_v1.5.hex  dimmerAC1-gd32f330k8u6-2.0.hex  dimmerAC1-gd32f330k8u6-2.1.hex  dimmerAC1-gd32f330k8u6-2.2.hex  dimmerAC1-gd32f330k8u6-2.4.hex  dimmerAC12-gd32f330k8u6-2.12.hex  dimmerAC12.hex  dimmerDC12-gd32f330k8u6-2.11.hex  dimmerDC12-gd32f330k8u6-2.7.hex  dimmerDC12-gd32f330k8u6-2.9.hex  dimmerDC12.hex  dimmer_ac12_v2.2.hex  dimmer_ac12_v2.5.hex  dimmer_ac12_v2.6.hex  dimmer_ac12_v2.7.hex  dimmer_dc_v2.2.hex  dimmer_dc_v2.5.hex  doppler1-gd32f330k8u6-2.10.hex  doppler1-gd32f330k8u6-2.6.hex  doppler1-gd32f330k8u6-2.8.hex  doppler1_v2.5.hex  doppler5-gd32f330k8u6-2.10.hex  doppler5-gd32f330k8u6-2.6.hex  doppler5_v2.5.hex  leak_sensor-gd32f330k8u6-1.0.hex  mix6x12-gd32f330k8u6-3.11.hex  mix6x12-gd32f330k8u6-3.12.hex  mix6x12-gd32f330k8u6-3.6.hex  mix6x12-gd32f330k8u6-3.7.hex  mix6x12.hex  mix6x12_v3.2.hex  (+84 more)
GD32F330K8U6/old_version/: di4_v4.5.hex  di4la-gd32f330k8u6-1.6.hex  di4la-gd32f330k8u6-1.8.hex  dimmerAC12-gd32f330k8u6-2.10.hex  dimmerAC12-gd32f330k8u6-2.8.hex  dimmerAC12-gd32f330k8u6-2.9.hex  dimmerDC12-gd32f330k8u6-2.8.hex  dimmer_dc12_2.6.hex  doppler5-gd32f330k8u6-2.8.hex  mix6x12-gd32f330k8u6-3.10.hex  mix6x12-gd32f330k8u6-3.8.hex  mix6x12_v3.5.hex  relay12-gd32f330k8u6-3.6.hex  relay12-gd32f330k8u6-3.7.hex  relay12_v3.4.hex  smart_bottom_1-gd32f330k8u6-4.9.hex  smart_bottom_CO2-gd32f330k8u6-4.6.hex  smart_bottom_CO2-gd32f330k8u6-4.9.hex  smart_top_a4t-gd32f330k8u6-4.8.hex  smart_top_a4t_v4.6..hex  smart_top_a4t_v5-gd32f330k8u6-4.13.hex  smart_top_a4td-gd32f330k8u6-4.6.hex  smart_top_a6p-gd32f330k8u6-4.7.hex  smart_top_a6p_v4.6..hex  smart_top_a6t-gd32f330k8u6-4.7.hex  smart_top_g2-gd32f330k8u6-4.7.hex  smart_top_g2-gd32f330k8u6-4.8.hex  smart_top_g2_v4.6..hex  smart_top_g2_v9-gd32f330k8u6-4.16.hex  smart_top_g4-gd32f330k8u6-4.7.hex  smart_top_g4_v4.6..hex  smart_top_g4_v9-gd32f330k8u6-4.13.hex  smart_top_g4d-gd32f330k8u6-4.8.hex  smart_top_g4d_v15-gd32f330k8u6-4.13.hex  smart_top_g4d_v4.0(ONLY_N_TRANSISTOR)старая.hex  smart_top_g6-gd32f330k8u6-4.8.hex  smart_top_g6_v4.0.hex
GD32F350K8U6/: di4_rsm_ao_v2.1.hex  di4_rsm_v2.2.hex  di4_rsm_v2.5.hex  di4rsm-gd32f350k8u6-2.6.hex  di4rsm-gd32f350k8u6-3.1.hex
GD32F350K8U6/old_version/: di4rsm-gd32f350k8u6-2.8.hex
GD32F450VGT6/: mixV-gd32f450vgt6-3.1.hex  rs_hub4-gd32f450vgt6-5.12.hex  rs_hub4-gd32f450vgt6-5.15.hex  rs_hub4-gd32f450vgt6-6.1.hex  rs_hub4-gd32f450vgt6-6.2.hex  rs_hub4_dim3_ow_di4.hex  rs_hub4_v5.1.hex  rs_hub4_v5.4.hex  rs_hub4_v5.5.hex  rs_hub4_v5.6.hex  server-gd32f450vgt6-6.1.hex  server-gd32f450vgt6-6.2.hex  server_5.6.hex  server_dim3_ow_rs4_di4.hex  server_v5.1.hex  server_v5.4.hex  server_v5.5.hex
GD32F450VGT6/old_version/: rs_hub4-gd32f450vgt6-5.11.hex  rs_hub4-gd32f450vgt6-5.13.hex  rs_hub4_dim3_ow_di4_v4.1.hex  rs_hub4_v5.7.hex  server-gd32f450vgt6-5.10.hex  server-gd32f450vgt6-5.6.hex  server-gd32f450vgt6-5.7.hex  server-gd32f450vgt6-5.8.hex
GD32F450VIT6/: soundbox-gd32f450vit6-1.1.hex
PIC32MX174F256B/: ao4_din.1.1.hex  ao4_din.1.2.hex  climate.1.1.hex  di4.4.1.hex  di4w.4.1.hex  di4w.4.2(PCB_v2.0).hex  di8.1.1.hex  doppler.2.1.hex  doppler_v3.2.1.hex  doppler_v3.2.10_test.hex  doppler_v3.2.3.hex  doppler_v3.2.4_(test).hex  doppler_v3.2.6.test.hex  doppler_v3.2.6_test.hex  doppler_v3.2.7_test.hex  doppler_v3.X.2.9_test.hex  ir4.3.1.hex  ir4_v2.3.1.hex  relay2.3.1.hex  relay2_din.2.1.hex  rs_hub1_rs.1.0.hex  smart4a.2.1.hex  smart4a_2207.2.1.hex  smart4am_2207.2.1.hex  smart4am_2207.2.2.hex  smart4am_2207.2.3.hex  smart4am_2207.2.4.hex  smart4am_2207.2.5.hex  smart4am_2207.2.6.hex  smart4g.2.1.hex  smart4g.2.2.hex  smart4g_2207.2.3.hex  smart4g_2207.2.5.hex  smart4gd.2.1.hex  smart4gd_2207.2.3.hex  smart4gd_2207.2.5.hex  smart6_push.1.0.hex  smart_co2.2.2.hex
PIC32MZ0512EFE064/: dim12_led_rs.2.1.e.hex  dim12_led_rs.2.2.e.hex  dim8_rs.2.1.e.hex  dim8_rs.2.2e.hex  dim8_rs.2.3.e.hex  mix1_rs..3.0..e.hex  mix1_rs.1.1.e.hex  mix1_rs.3.1.e.hex  relay12_rs.3.0.e.hex  relay12_rs.3.1.e.hex
PIC32MZ1024EFE064/: dim12_led_rs.2.2.e.hex  dim4.2.0.e.hex  dim8.2.0.e.hex  dim8_rs.2.3.e.hex  mix1.2.1.e.hex  mix1_rs.3.1.e.hex  relay12.2.1.e.hex  relay12.3.0.e.hex  relay12_rs.3.0.e.hex  relay12_rs.3.1.e.hex  relay6.2.1.e.hex
PIC32MZ1024EFM064/: dim12_led_rs.2.1.m.hex  dim12_led_rs.2.2.m.hex  dim4.2.0.m.hex  dim8.2.0.m.hex  dim8_rs.2.1.m.hex  dim8_rs.2.2.m.hex  dim8_rs.2.3.m.hex  lanamp.2.0.m.hex  lanamp_0722.2.0.m.hex  mix1.2.1.m.hex  mix1_rs.3.0.m.hex  mix1_rs.3.1.m.hex  relay12.2.1.m.hex  relay12.3.0.m.hex  relay12_rs.3.0.m.hex  relay12_rs.3.1.m.hex  relay6.2.1.m.hex  rs_hub4.1.0.m.hex
app/: Main.hs
block_diagram/: rx.drawio
formula/Formula/: AO4.hs  Blink.hs  Blink330.hs  Blink450.hs  CardHolder.hs  DI4.hs  DI4LA.hs  DI4RSM.hs  Dfu330.hs  Dfu450.hs  (+24 more)
graph/: app.dot  modules.dot  src.dot
jlink/: FlashMCU.jlink  GD32F3x0.svd
script/: erase_koro_450.sh  erase_loc_330.sh  erase_loc_450.sh  flash.sh  flash_di.sh  flash_dirsm.sh  flash_doppler_1.sh  flash_doppler_5.sh  flash_erase.sh  flash_koro_330.sh  flash_koro_450.sh  flash_koro_hub.sh  flash_koro_relay.sh  flash_koro_server.sh  flash_loc.sh  flash_loc_330.sh  flash_loc_450.sh  flash_loc_6gi.sh  flash_loc_6git.sh  flash_loc_rasp.sh  flash_mix.sh  flash_smart_a4td_7s.sh  flash_smart_bottom_1.sh  flash_smart_bottom_2.sh  flash_smart_top_a4td.sh  flash_smart_top_a6p.sh  flash_smart_top_a6t.sh  flash_smart_top_g4d.sh  graph.sh  office_doppler_5.sh  set_330.sh  smart_top_6gi.sh  total_doppler_5.sh
src/: Blink.hs  Domain.hs  Feature.hs  Firmware.hs  Formula.hs  Include.hs  Initialize.hs  Interface.hs  Prepare.hs  Scheduler.hs  Shake.hs  Test.hs  USART.hs  Util.hs
test/: Test.hs
(+823 files in other folders)
