cabal-version:      3.6
name:               reacthome-firmware
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:               Evgeny Gazdovsky
maintainer:           gazdovsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:   CHANGELOG.md

executable reacthome-firmware
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Core.Controller
                    , Core.Context
                    , Core.Domain
                    , Core.Dispatcher
                    , Core.Feature                    
                    , Core.Formula
                    , Core.Handler
                    , Core.Scheduler
                    , Core.Task
                    , Core.Transport
                    , Core.Version

                    , Build.Compiler
                    , Build.Compiler.GCC
                    , Build.Compiler.GCC.Config
                    , Build.Compiler.GCC.GD32F3x0
                    , Build.Compiler.GCC.GD32F4xx
                    , Build.Firmware
                    , Build.Shake

                    , Data.Area
                    , Data.Value
                    , Data.Record
                    , Data.Buffer
                    , Data.Index
                    , Data.Serialize
                    , Data.Concurrent.Semaphore
                    , Data.Concurrent.Queue

                    , Endpoint.Relay
                    , Endpoint.Relays
                    , Endpoint.Groups

                    , Feature.Blink
                    , Feature.Relay
                    , Feature.Relays

                    , Formula.Blink330
                    , Formula.Blink450
                    , Formula.Relay12

                    , Interface.Counter
                    , Interface.GPIO.Input
                    , Interface.GPIO.Output
                    , Interface.GPIOs.Inputs
                    , Interface.GPIOs.Outputs
                    , Interface.Mac
                    , Interface.MCU
                    , Interface.SystemClock
                    , Interface.Timer
                    , Interface.USART
                    , Interface.RS485

                    , Protocol.RBUS
                    , Protocol.RBUS.Master
                    , Protocol.RBUS.Slave
                    , Protocol.RBUS.Slave.Rx
                    , Protocol.RBUS.Slave.Tx

                    , Transport.RBUS
                    , Transport.RBUS.Data
                    , Transport.RBUS.Rx
                    , Transport.RBUS.Tx
                    , Transport.UBUS

                    , Device.GD32F3x0
                    , Device.GD32F3x0.GPIO
                    , Device.GD32F3x0.GPIO.Input
                    , Device.GD32F3x0.GPIO.Output
                    , Device.GD32F3x0.GPIOs
                    , Device.GD32F3x0.GPIOs.Inputs
                    , Device.GD32F3x0.GPIOs.Outputs
                    , Device.GD32F3x0.Mac
                    , Device.GD32F3x0.SysTick
                    , Device.GD32F3x0.SystemClock
                    , Device.GD32F3x0.Timer
                    , Device.GD32F3x0.USART

                    , Device.GD32F4xx
                    , Device.GD32F4xx.GPIO
                    , Device.GD32F4xx.GPIO.Input
                    , Device.GD32F4xx.GPIO.Output
                    , Device.GD32F4xx.GPIOs
                    , Device.GD32F4xx.GPIOs.Inputs
                    , Device.GD32F4xx.GPIOs.Outputs
                    , Device.GD32F4xx.Mac
                    , Device.GD32F4xx.SysTick
                    , Device.GD32F4xx.SystemClock
                    , Device.GD32F4xx.Timer
                    , Device.GD32F4xx.USART

                    , Ivory.Support
                    , Ivory.Support.Device.GD32F3x0
                    , Ivory.Support.Device.GD32F4xx

                    , Support.Cast
                    , Support.Serialize
                    , Support.CMSIS.CoreCM4

                    , Support.Device.GD32F3x0
                    , Support.Device.GD32F3x0.DBG
                    , Support.Device.GD32F3x0.DMA
                    , Support.Device.GD32F3x0.GPIO
                    , Support.Device.GD32F3x0.IRQ
                    , Support.Device.GD32F3x0.Misc
                    , Support.Device.GD32F3x0.RCU
                    , Support.Device.GD32F3x0.Timer
                    , Support.Device.GD32F3x0.USART
                    , Support.Device.GD32F3x0.EXTI
                    , Support.Device.GD32F3x0.SYSCFG

                    , Support.Device.GD32F4xx
                    , Support.Device.GD32F4xx.DBG
                    , Support.Device.GD32F4xx.DMA
                    , Support.Device.GD32F4xx.GPIO
                    , Support.Device.GD32F4xx.IRQ
                    , Support.Device.GD32F4xx.Misc
                    , Support.Device.GD32F4xx.RCU
                    , Support.Device.GD32F4xx.Timer
                    , Support.Device.GD32F4xx.USART
                    , Support.Device.GD32F4xx.EXTI
                    , Support.Device.GD32F4xx.SYSCFG

                    , Util.CRC16

    build-depends:    base ^>=4.16.4.0
                    , mtl  
                    , ivory
                    , ivory-backend-c
                    , ivory-stdlib
                    , shake
                    , pureMD5
                    , bytestring

    hs-source-dirs:   app
                    , formula
                    , src

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: 

    default-language: Haskell2010
