cabal-version:      3.6
name:               reacthome-firmware
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:               Evgeny Gazdovsky
maintainer:           gazdovsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:   CHANGELOG.md

executable reacthome-firmware
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Core.Controller
                    , Core.Context
                    , Core.Domain
                    , Core.Dispatcher
                    , Core.Feature                    
                    , Core.Formula
                    , Core.FSM
                    , Core.Handler
                    , Core.Scheduler
                    , Core.Task
                    , Core.Transport
                    , Core.Version

                    , Build.Compiler
                    , Build.Compiler.GCC
                    , Build.Compiler.GCC.Config
                    , Build.Compiler.GCC.GD32F3x0
                    , Build.Compiler.GCC.GD32F4xx
                    , Build.Firmware
                    , Build.Shake

                    , Data.Area
                    , Data.Value
                    , Data.Record
                    , Data.Buffer
                    , Data.Index
                    , Data.Matrix
                    , Data.Color
                    , Data.Display.Canvas1D
                    , Data.Display.FrameBuffer
                    , Data.Display.FrameBuffer.NeoPixel.PWM
                    , Data.Display.FrameBuffer.NeoPixel.SPI
                    , Data.Serialize
                    , Data.Concurrent.Semaphore
                    , Data.Concurrent.Queue

                    , Endpoint.ATS
                    , Endpoint.DInputs
                    , Endpoint.DInputsRelaysRules
                    , Endpoint.Groups
                    , Endpoint.Dimmers
                    , Endpoint.Relays

                    , Feature.Blink
                    , Feature.Echo
                    , Feature.DInputs
                    , Feature.Dimmer.AC
                    , Feature.Dimmer.DC
                    , Feature.Indicator
                    , Feature.Mix
                    , Feature.Relays
                    , Feature.RS485.RBUS
                    , Feature.RS485.RBUS.Data
                    , Feature.RS485.RBUS.Rx
                    , Feature.RS485.RBUS.Tx

                    , Formula.Blink330
                    , Formula.Blink450
                    , Formula.Echo
                    , Formula.Relay12
                    , Formula.Server
                    , Formula.DimmerAC12
                    , Formula.DimmerDC12
                    , Formula.Mix6x12

                    , Interface.Counter
                    , Interface.GPIO.Input
                    , Interface.GPIO.Output
                    , Interface.Mac
                    , Interface.MCU
                    , Interface.SystemClock
                    , Interface.Timer
                    , Interface.UART
                    , Interface.RS485
                    , Interface.PWM
                    , Interface.EXTI
                    , Interface.Display
                    , Interface.Flash

                    , Protocol.RS485.RBUS
                    , Protocol.RS485.RBUS.Master
                    , Protocol.RS485.RBUS.Master.MacTable
                    , Protocol.RS485.RBUS.Master.Rx
                    , Protocol.RS485.RBUS.Master.Tx
                    , Protocol.RS485.RBUS.Slave
                    , Protocol.RS485.RBUS.Slave.Rx
                    , Protocol.RS485.RBUS.Slave.Tx
                    , Protocol.UART.RBUS
                    , Protocol.UART.RBUS.Rx
                    , Protocol.UART.RBUS.Tx

                    , Transport.RS485.RBUS
                    , Transport.RS485.RBUS.Data
                    , Transport.RS485.RBUS.Rx
                    , Transport.RS485.RBUS.Tx
                    , Transport.UART.RBUS
                    , Transport.UART.RBUS.Data
                    , Transport.UART.RBUS.Rx
                    , Transport.UART.RBUS.Tx

                    , Device.GD32F3x0
                    , Device.GD32F3x0.Display.NeoPixel
                    , Device.GD32F3x0.EXTI
                    , Device.GD32F3x0.GPIO
                    , Device.GD32F3x0.GPIO.Input
                    , Device.GD32F3x0.GPIO.Output
                    , Device.GD32F3x0.Mac
                    , Device.GD32F3x0.PWM
                    , Device.GD32F3x0.SystemClock
                    , Device.GD32F3x0.SysTick
                    , Device.GD32F3x0.Timer
                    , Device.GD32F3x0.UART
                    , Device.GD32F3x0.Flash

                    , Device.GD32F4xx
                    , Device.GD32F4xx.Display.NeoPixel
                    , Device.GD32F4xx.GPIO
                    , Device.GD32F4xx.GPIO.Input
                    , Device.GD32F4xx.GPIO.Output
                    , Device.GD32F4xx.Mac
                    , Device.GD32F4xx.PWM
                    , Device.GD32F4xx.SysTick
                    , Device.GD32F4xx.SystemClock
                    , Device.GD32F4xx.Timer
                    , Device.GD32F4xx.UART
                    , Device.GD32F4xx.Flash

                    , Ivory.Support
                    , Ivory.Support.Device.GD32F3x0
                    , Ivory.Support.Device.GD32F4xx

                    , Support.Cast
                    , Support.ReadAddr
                    , Support.Serialize
                    , Support.CMSIS.CoreCM4

                    , Support.Device.GD32F3x0
                    , Support.Device.GD32F3x0.DBG
                    , Support.Device.GD32F3x0.DMA
                    , Support.Device.GD32F3x0.GPIO
                    , Support.Device.GD32F3x0.IRQ
                    , Support.Device.GD32F3x0.Misc
                    , Support.Device.GD32F3x0.RCU
                    , Support.Device.GD32F3x0.Timer
                    , Support.Device.GD32F3x0.USART
                    , Support.Device.GD32F3x0.EXTI
                    , Support.Device.GD32F3x0.SYSCFG
                    , Support.Device.GD32F3x0.System
                    , Support.Device.GD32F3x0.FMC

                    , Support.Device.GD32F4xx
                    , Support.Device.GD32F4xx.DBG
                    , Support.Device.GD32F4xx.DMA
                    , Support.Device.GD32F4xx.GPIO
                    , Support.Device.GD32F4xx.IRQ
                    , Support.Device.GD32F4xx.Misc
                    , Support.Device.GD32F4xx.RCU
                    , Support.Device.GD32F4xx.Timer
                    , Support.Device.GD32F4xx.USART
                    , Support.Device.GD32F4xx.EXTI
                    , Support.Device.GD32F4xx.SYSCFG
                    , Support.Device.GD32F4xx.System

                    , Test

                    , Util.CRC16
                    , Util.String

    build-depends:    base ^>=4.16.4.0
                    , mtl  
                    , ivory
                    , ivory-backend-c
                    , ivory-stdlib
                    , shake
                    , pureMD5
                    , bytestring

    hs-source-dirs:   app
                    , formula
                    , src
                    , test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: 

    default-language: Haskell2010
